@@ -1514,7 +1514,55 @@ _wrap_g_file_set_attributes_finish(PyGObject *self,
 
     return py_ret;
 }
+%%
+override g_file_set_display_name_async kwargs
+static PyObject *
+_wrap_g_file_set_display_name_async(PyGObject *self,
+				    PyObject *args,
+				    PyObject *kwargs)
+{
+    static char *kwlist[] = { "display_name", "callback",
+			      "io_priority", "cancellable", "user_data", NULL };
+    PyGIONotify *notify;
+    char *display_name;
+    int io_priority = G_PRIORITY_DEFAULT;
+    GCancellable *cancellable = NULL;
+    PyGObject *py_cancellable = NULL;
 
-/* GFile.set_display_name_async */
+    notify = pygio_notify_new();
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+				     "sO|iOO:GFile.set_display_name_async",
+				     kwlist,
+				     &display_name,
+				     &notify->callback,
+				     &io_priority,
+				     &py_cancellable,
+				     &notify->data))
+        goto error;
+
+    if (!pygio_notify_callback_is_valid(notify))
+        goto error;
+
+    if (!pygio_check_cancellable(py_cancellable, &cancellable))
+	goto error;
+
+    pygio_notify_reference_callback(notify);
+
+    g_file_set_display_name_async(G_FILE(self->obj),
+			    display_name,
+			    io_priority,
+			    (GCancellable *) cancellable,
+			    (GAsyncReadyCallback)async_result_callback_marshal,
+			    notify);
+
+    Py_INCREF(Py_None);
+    return Py_None;
+
+ error:
+    pygio_notify_free(notify);
+    return NULL;
+}
+
 /* GFile.load_partial_contents_async: No ArgType for GFileReadMoreCallback */
 /* GFile.load_partial_contents_finish: No ArgType for char** */
